python-werkzeug (0.11.9+dfsg1-1) UNRELEASED; urgency=medium

  * New upstream release
  * Fixed VCS URL (https)
  * d/watch: Moved from pypi to github, which contains Werkzeug theme
  * d/copyright: Fixed Files-Excluded for new upstream release

 -- Ondřej Nový <novy@ondrej.org>  Tue, 29 Mar 2016 22:27:44 +0200

python-werkzeug (0.10.4+dfsg1-1) unstable; urgency=medium

  * New upstream release (closes: 792802)
    - drop no longer needed 13218de4.patch and 0bad0c25.patch
    - add missing docs/_themes to the upstream tarball
  * Remove ubuntu.ttf, jquery.js and Werkzeug.egg-info via Files-Excluded in
    debian/copyright (egg-info one closes: 671254)
  * debian/watch: use pypi.debian.net redirector
  * debian/rules: remove no longer needed get-orig-source and use
    debian/python{3,}-werkzeug.links files instead of override_dh_python
  * Replace Noah with DPMT in Maintainer (thanks Noah for all your work)
  * Standards-Version bumped to 3.9.6 (no changes needed)
  * Add python{3,}-requests and python{3,}-pytest to Build-Depends
    (upstream switched test suite to py.tests)

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 20 Jul 2015 21:09:06 +0200

python-werkzeug (0.9.6+dfsg-1) unstable; urgency=medium

  * New upstream release
  * Remove b23efe87 patch (no longer needed)
  * Add 13218dea patch to fix tests on Python 3.4 (closes: 745852)
  * Add maxsize fix for Python 3 (backported 0bad0c25 commit)
  * Hardcode LC_ALL to C.UTF-8 while invoking tests to workaround pbuilder's
    ancient defaults (closes: 739077)

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 10 Jun 2014 20:47:05 +0200

python-werkzeug (0.9.4+dfsg-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Start memcached for tests, thanks to Sebastian Ramacher for the patch
    (Closes: #725594)

 -- Gaudenz Steinlin <gaudenz@debian.org>  Mon, 06 Jan 2014 19:01:32 +0100

python-werkzeug (0.9.4+dfsg-1) unstable; urgency=low

  * New upstream release