@@ -7,7 +7,7 @@ Files-Excluded: werkzeug/debug/shared/ubuntu.ttf
                 werkzeug/debug/shared/jquery.js
 
 Files: *
-Copyright: Copyright 2009-2015, the Werkzeug Team
+Copyright: Copyright 2009-2016, the Werkzeug Team, see AUTHORS for more details.
 License: BSD-3-clause
  Redistribution and use in source and binary forms, with or without
  modification, are permitted provided that the following conditions are
